[project]
name = "graph-api"
version = "0.1.0"
description = "FastAPI Graph API"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.29.0",
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "FastAPI>=0.117.1",
    "neo4j>=5.28.0",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "numpy>=2.0.2",
    "uvicorn>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic-core>=2.14.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "SQLAlchemy>=2.0.25",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "pytest-tornasync>=0.6.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"